<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/emoji_home"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_favorites"
            android:icon="@drawable/love_menu"
            android:title="@string/favorites" />
        <item
            android:id="@+id/drawer_apps"
            android:icon="@drawable/our_apps"
            android:title="@string/our_apps" />
        <item
            android:id="@+id/drawer_contact"
            android:icon="@drawable/box"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
    </group>
</menu>
