<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgReelThumb"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnReelDownload"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_download_button"
                android:src="@drawable/emoji_download"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/download" />

            <ImageButton
                android:id="@+id/btnReelFavorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/heart_empty"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/favorites" />

            <ImageButton
                android:id="@+id/btnReelDelete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/emoji_delete"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:contentDescription="@string/delete" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
